--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     
     <div class="video-part">
         <video muted autoplay loop>
-            <source src="images/abood.mp4">
+            <source src="images/fruits.mp4">
         </video>
         <div class="video-part-text">
             <h3>super awesome video hear</h3>
